--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-#welcome-section{
+#welcomeSection{
     text-align: center;
     display: flex;
     height: 100vh;
@@ -7,7 +7,7 @@
     justify-content: center;
     background-image: linear-gradient(62deg, #16161a 0%, #363636 100%);
 }
-#welcome-p{
+#welcomeP{
     color: #FF8364;
 }
 #projects{
@@ -16,7 +16,7 @@
     height: 140vh;
     text-align: center;
 }
-#project-title{
+#projectTitle{
     margin: 0;
     padding: 25vh 0 25vh 0;
     display: flex;
@@ -31,7 +31,7 @@
     justify-items: center;
 }
 
-#grid-item4{
+#gridItem4{
     grid-column: 2/3;
     grid-row: 2/3;
 }
@@ -40,19 +40,19 @@
     display: flex;
     flex-direction: column;
 }
-.project-tile{
+.projectTile{
     color: #F1F1F1;
     text-decoration: none;
     background-color: #504946;
     padding: 3vh 0 3vh 0;
 }
-.project-tile:hover{
+.projectTile:hover{
     background-color: #444342;
     color: #ec830a;
     transition: 0.8s;
 }
 
-.project-img{
+.projectImg{
     height: 24vh;   
 }
 #navbar{
@@ -65,7 +65,7 @@
     font-size: 1.2em;
     z-index: 2;
 }
-.nav-elements{
+.navElements{
     padding-right: 30px;
     color: #F1F1F1;
 }
@@ -82,20 +82,20 @@
     transform: translateX(0);
 }
 
-#contact-section{
+#contactCection{
     background-color: #242427;
     width: 100%;
     height: 16vh;
     text-align: center;
 }
 
-.contact-details{
+.contactDetails{
     text-decoration: none;
     padding: 30px;
     color: #F1F1F1;
 }
 
-.contact-details:hover {
+.contactDetails:hover {
     transition: 0.8s;
     color: #fffbfb;
 }
