--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -82,7 +82,7 @@
     transform: translateX(0);
 }
 
-#contactCection{
+#contactSection{
     background-color: #242427;
     width: 100%;
     height: 16vh;
