Responsividade Seção de Projetos

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -99,3 +99,17 @@
     transition: 0.8s;
     color: #fffbfb;
 }
+
+@media (max-width: 1414px) {
+  #project {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #projects{
+    background-image: linear-gradient(360deg, #242427 0%, #616060 100%);
+    width: 100%;
+    height: auto;
+    text-align: center;   
+  }
+}
