--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,7 +43,7 @@
 .projectTile{
     color: #F1F1F1;
     text-decoration: none;
-    background-color: #504946;
+    background-color: #424141;
     width: 100%;
     padding: 5% 0 5% 0;
 }
@@ -107,6 +107,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 10%;
   }
   #projects{
     background-image: linear-gradient(360deg, #242427 0%, #616060 100%);
